Add system index plugin authz tests
Signed-off-by: Craig Perkins <cwperx@amazon.com>